--- a/index.html
+++ b/index.html
@@ -10,68 +10,84 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIMINO</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css"/>
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header>
       <div class="container">
         <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo">MIMINO</a>
-        <ul class="site-nav__list">
-          <li class="site-nav__item">
-            <a
-              href="./index.html"
-              class="site-nav__link site-nav__link--current"
-              >Ресторан</a>
-          </li>
-          <li class="site-nav__item">
-            <a href="tel:095 555 95 33" class="site-nav__phone"
-              ><svg class="site-nav__icon" width="12" height="20">
-                <use href="./images/icons.svg#icon-phone-icon"></use></svg
-              >095 555 95 33</a>
-          </li>
-          <li class="site-nav__item">
-            <a href="./index.html" class="site-nav__link">Готель</a>
-          </li>
-          <li class="site-nav__item">
-            <a href="tel:066 849 10 89" class="site-nav__phone"
-              ><svg class="site-nav__icon" width="12" height="20">
-                <use href="./images/icons.svg#icon-phone-icon"></use></svg>066 849 10 89</a>
-          </li>
-          <li class="site-nav__item">
-            <a href="tel:067 275 85 40" class="site-nav__phone">067 275 85 40</a>
-          </li>
-         </ul>
-         <ul class="site-net">
-          <li class="site-net__item">
-            <a href="" class="site-net__link">
-                <button type="button" class="site-net__button">
-              <svg class="site-net__icon" width="22" height="22">
-                <use href="./images/icons.svg#icon-instagram-icon"></use>
-              </svg></button>
-            </a>
-          </li>
-          <li class="site-net__item">
-            <a href="" class="site-net__link"><button type="button" class="site-net__button">
-              <svg class="site-net__icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook-icon"></use>
-              </svg></button>
-            </a>
-          </li>
-          <li class="site-net__item">
-        <a href="" class="site-net__link"><button type="button" class="site-net__button">
-              <svg class="site-net__icon" width="19.5" height="17.51">
-                <use href="./images/icons.svg#icon-telegram-icon"></use>
-              </svg></button>
-            </a>
-          </li>
-         </ul>
-          </ul>
+          <a href="./index.html" class="site-nav__logo site-nav__logo--current">MIMINO</a>
+          <div class="site-nav__pages">
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <div class="site-nav__page">
+                  <a href="./index.html" class="site-nav__link">Ресторан</a>
+                  <div class="site-nav__contact">
+                    <a href="tel:095 555 95 33" class="site-nav__phone"
+                      ><svg class="site-nav__icon" width="12" height="20">
+                        <use href="./images/icons.svg#icon-phone-icon"></use></svg
+                      >095 555 95 33</a
+                    >
+                  </div>
+                </div>
+              </li>
+              <li class="site-nav__item">
+                <div class="site-nav__page">
+                  <a href="./index.html" class="site-nav__link">Готель</a>
+                  <div class="site-nav__contact">
+                    <a href="tel:066 849 10 89" class="site-nav__phone"
+                      ><svg class="site-nav__icon" width="12" height="20">
+                        <use href="./images/icons.svg#icon-phone-icon"></use></svg
+                      >066 849 10 89</a
+                    >
+                    <a href="tel:067 275 85 40" class="site-nav__phone">067 275 85 40</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="site-net">
+            <ul class="site-net__list">
+              <li class="site-net__item">
+                <a href="" class="site-net__link">
+                  <button type="button" class="site-net__button">
+                    <svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram-icon"></use>
+                    </svg>
+                  </button>
+                </a>
+              </li>
+              <li class="site-net__item">
+                <a href="" class="site-net__link"
+                  ><button type="button" class="site-net__button">
+                    <svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook-icon"></use>
+                    </svg>
+                  </button>
+                </a>
+              </li>
+              <li class="site-net__item">
+                <a href="" class="site-net__link"
+                  ><button type="button" class="site-net__button">
+                    <svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-telegram-icon"></use>
+                    </svg>
+                  </button>
+                </a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
