--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
                 <div class="site-nav__page">
                   <a href="./index.html" class="site-nav__link">Ресторан</a>
                   <div class="site-nav__contact">
-                    <a href="tel:095 555 95 33" class="site-nav__phone"
-                      ><svg class="site-nav__icon" width="12" height="20">
-                        <use href="./images/icons.svg#icon-phone-icon"></use></svg
-                      >095 555 95 33</a
-                    >
+                    <svg class="site-nav__icon" width="12" height="20">
+                      <use href="./images/icons.svg#icon-phone-icon"></use>
+                    </svg>
+                    <a href="tel:095 555 95 33" class="site-nav__phone">095 555 95 33</a>
                   </div>
                 </div>
               </li>
@@ -46,11 +45,10 @@
                 <div class="site-nav__page">
                   <a href="./index.html" class="site-nav__link">Готель</a>
                   <div class="site-nav__contact">
-                    <a href="tel:066 849 10 89" class="site-nav__phone"
-                      ><svg class="site-nav__icon" width="12" height="20">
-                        <use href="./images/icons.svg#icon-phone-icon"></use></svg
-                      >066 849 10 89</a
-                    >
+                    <svg class="site-nav__icon" width="12" height="20">
+                      <use href="./images/icons.svg#icon-phone-icon"></use>
+                    </svg>
+                    <a href="tel:066 849 10 89" class="site-nav__phone">066 849 10 89</a>
                     <a href="tel:067 275 85 40" class="site-nav__phone">067 275 85 40</a>
                   </div>
                 </div>
@@ -89,6 +87,16 @@
             </ul>
           </div>
         </nav>
+        <address>
+          <div class="site-address">
+            <svg class="site-address__icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-location-icon"></use>
+            </svg>
+            <a href="./" class="site-address__text"
+              >Україна, м. Полтава, вул. Маршала Бірюзова, 15</a
+            >
+          </div>
+        </address>
       </div>
     </header>
     <section-hero>
