--- a/index.html
+++ b/index.html
@@ -59,29 +59,23 @@
             <ul class="site-net__list">
               <li class="site-net__item">
                 <a href="" class="site-net__link">
-                  <button type="button" class="site-net__button">
                     <svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram-icon"></use>
                     </svg>
-                  </button>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link"
-                  ><button type="button" class="site-net__button">
-                    <svg class="site-net__icon" width="24" height="24">
+                <a href="" class="site-net__link target="_blank"
+                  ><svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook-icon"></use>
                     </svg>
-                  </button>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link"
-                  ><button type="button" class="site-net__button">
-                    <svg class="site-net__icon" width="24" height="24">
+                <a href="" class="site-net__link target="_blank"
+                  ><svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-telegram-icon"></use>
-                    </svg>
-                  </button>
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -92,7 +86,7 @@
             <svg class="site-address__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-location-icon"></use>
             </svg>
-            <a href="./" class="site-address__text"
+            <a href="./" class="site-address__text target="_blank"
               >Україна, м. Полтава, вул. Маршала Бірюзова, 15</a
             >
           </div>
@@ -100,7 +94,19 @@
       </div>
     </header>
     <section-hero>
-      <div class="container"></div>
+      <div class="container">
+        <h1>MIMIHO</h1>
+        <h2>Ресторанно-готельний комплекс</h2>
+        <h3>СМАК ЖИТТЯ 24/7</h3>
+        <div class="site-address">
+          <svg class="site-address__icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-location-icon"></use>
+          </svg>
+          <a href="./" class="site-address__text">Україна, м. Полтава, вул. Маршала Бірюзова, 15</a>
+        </div>
+        <button type="button">Забронювати столик</button>
+        <button type="button">Забронювати номер</button>
+      </div>
     </section-hero>
     <section></section>
     <section></section>
