--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
     </header>
     <section-hero>
       <div class="container">
-        <h1>MIMIHO</h1>
-        <h2>Ресторанно-готельний комплекс</h2>
-        <h3>СМАК ЖИТТЯ 24/7</h3>
+        <h1 class="hero__title" >MIMIHO</h1>
+        <h2 class="hero__subtitle">Ресторанно-готельний комплекс</h2>
+        <p class="hero__slogan">СМАК ЖИТТЯ 24/7</p>
         <div class="site-address">
           <svg class="site-address__icon" width="20" height="20">
             <use href="./images/icons.svg#icon-location-icon"></use>
           </svg>
           <a href="./" class="site-address__text">Україна, м. Полтава, вул. Маршала Бірюзова, 15</a>
         </div>
-        <button type="button">Забронювати столик</button>
-        <button type="button">Забронювати номер</button>
+        <button class="order-table" type="button">Забронювати столик</button>
+        <button class="order-room" type="button">Забронювати номер</button>
       </div>
     </section-hero>
     <section></section>
