--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </address>
       </div>
     </header>
-    <section-hero>
+    <section class="hero-section">
       <div class="container">
         <h1 class="hero__title" >MIMIHO</h1>
         <h2 class="hero__subtitle">Ресторанно-готельний комплекс</h2>
@@ -107,7 +107,7 @@
         <button class="order-table" type="button">Забронювати столик</button>
         <button class="order-room" type="button">Забронювати номер</button>
       </div>
-    </section-hero>
+    </section>
     <section></section>
     <section></section>
     <section></section>
