--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
       <div class="container">
         <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo site-nav__logo--current">MIMINO</a>
+          <a href="./index.html" class="site-nav__logo logo site-nav__logo--current">MIMIHO</a>
           <div class="site-nav__pages">
             <ul class="site-nav__list">
               <li class="site-nav__item">
@@ -98,14 +98,16 @@
         <h1 class="hero__title" >MIMIHO</h1>
         <h2 class="hero__subtitle">Ресторанно-готельний комплекс</h2>
         <p class="hero__slogan">СМАК ЖИТТЯ 24/7</p>
-        <div class="site-address">
+        <div class="hero-section__site-address site-address">
           <svg class="site-address__icon" width="20" height="20">
             <use href="./images/icons.svg#icon-location-icon"></use>
           </svg>
           <a href="./" class="site-address__text">Україна, м. Полтава, вул. Маршала Бірюзова, 15</a>
         </div>
+        <div class="hero__buttons">
         <button class="order-table" type="button">Забронювати столик</button>
-        <button class="order-room" type="button">Забронювати номер</button>
+        <a href="./"><button class="order-room" type="button">Забронювати номер</button></a>
+        </div>
       </div>
     </section>
     <section></section>
