--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
     <section></section>
     <section></section>
     <footer></footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
