--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <div class="container">
         <nav class="site-nav">
           <a href="./index.html" class="site-nav__logo logo site-nav__logo--current">MIMIHO</a>
@@ -82,7 +82,7 @@
           </div>
         </nav>
         <address>
-          <div class="site-address">
+          <div class="page-header__site-address site-address">
             <svg class="site-address__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-location-icon"></use>
             </svg>
