--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <button class="table__button" type="button" data-modal-open>Забронювати столик</button>
         <!--Backdrop-->
         <div class="backdrop is-hidden" data-modal>
-          <div class="modal-table">
+          <div class="modal">
             <button type="button" class="button-close" data-modal-close>
               <svg class="x-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-bytesize_close-1"></use>
