--- a/index.html
+++ b/index.html
@@ -160,6 +160,6 @@
     <section></section>
     <section></section>
     <footer></footer>
-    <script src="./js/modal.js"></script>
+    <script src="./sass/js/modal.js"></script>
   </body>
 </html>
