--- a/index.html
+++ b/index.html
@@ -55,25 +55,23 @@
               </li>
             </ul>
           </div>
-          <div class="site-net">
+          <div class="page-header__site-net site-net">
             <ul class="site-net__list">
               <li class="site-net__item">
-                <a href="" class="site-net__link">
+                <a href="" class="site-net__link" target="_blank">
                     <svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram-icon"></use>
                     </svg>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link target="_blank"
-                  ><svg class="site-net__icon" width="24" height="24">
+                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook-icon"></use>
                     </svg>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link target="_blank"
-                  ><svg class="site-net__icon" width="24" height="24">
+                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-telegram-icon"></use>
                   </svg>
                 </a>
@@ -154,6 +152,29 @@
           </div>
         </div>
         <a href="./"><button class="room__button" type="button">Забронювати номер</button></a>
+        <div class="hero-section__site-net site-net">
+            <ul class="site-net__list">
+              <li class="site-net__item">
+                <a href="" class="site-net__link" target="_blank">
+                    <svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram-icon"></use>
+                    </svg>
+                </a>
+              </li>
+              <li class="site-net__item">
+                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook-icon"></use>
+                    </svg>
+                </a>
+              </li>
+              <li class="site-net__item">
+                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-telegram-icon"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
       </div>
     </section>
     <section></section>
