--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@
           </div>
       </div>
     </section>
-    <section></section>
+    <!--About our restaurant-->
+    <section>
+      <div class="container">
+        <h2 class=""
+      </div>
+    </section>
     <section></section>
     <section></section>
     <footer></footer>
