--- a/index.html
+++ b/index.html
@@ -178,10 +178,22 @@
       </div>
     </section>
     <!--About our restaurant-->
-    <section>
+    <section class="restaurant">
       <div class="container">
-        <h2 class=""
-      </div>
+        <h2 class="restaurant__title">Про наш ресторан</h2>
+        <h3 class="restaurant__subtitle">Amet minim mollit non</h3>
+        <h4 class="restaurant__logo">MIMIHO</h4>
+        <div class="restaurant__info">
+        <p class="restaurant__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <img src="./">
+        </div>
+        <div class="restaurant__info">
+        <p class="restaurant__text2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <img src="./">
+        </div>
+        </div>
     </section>
     <section></section>
     <section></section>
