--- a/index.html
+++ b/index.html
@@ -193,11 +193,19 @@
           Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <img src="./">
         </div>
+        <div class="slider">
+          <div class="slider__item">
+            <img src="./images/pexels-helena-lopes-696218 1.jpg" alt="">
+          </div>
+        </div>
         </div>
     </section>
     <section></section>
     <section></section>
     <footer></footer>
+    <script src="https://jquery.com/download/#:~:text=//code.jquery.com/jquery%2D3.6.1.min.js"></script>
+    <script src="./sass/js/slick.min.js"></script>
+    <script src="./slick-1.8.1/slick/slick.js"></script>
     <script src="./sass/js/modal.js"></script>
   </body>
 </html>
