--- a/index.html
+++ b/index.html
@@ -197,6 +197,18 @@
           <div class="slider__item">
             <img src="./images/pexels-helena-lopes-696218 1.jpg" alt="">
           </div>
+          <div class="slider__item">
+            <img src="./images/2.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="./images/3.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="./images/4.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="./images/5.jpg" alt="">
+          </div>
         </div>
         </div>
     </section>
