--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
     <section></section>
     <section></section>
     <footer></footer>
-    <script src="https://jquery.com/download/#:~:text=//code.jquery.com/jquery%2D3.6.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="./sass/js/slick.min.js"></script>
-    <script src="./slick-1.8.1/slick/slick.js"></script>
+    <script src="./sass/js/script.js"></script>
     <script src="./sass/js/modal.js"></script>
   </body>
 </html>
