--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
           <div class="slider__item">
             <img src="./images/5.jpg" alt="">
           </div>
-          <button class="slick-arrow.slick-prev" type="button">
+          <!-- <button class="slick-arrow.slick-prev" type="button">
             <svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-left"></use>
                     </svg>
           </button>
           <button class="slick-arrow.slick-next" type="button"><svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-right"></use>
-                    </svg></button>
+                    </svg></button> -->
 
         </div>
         </div>
