--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <img src="./">
         </div>
+        <div class="slider-container">
         <div class="slider">
           <div class="slider__item">
             <img src="./images/pexels-helena-lopes-696218 1.jpg" alt="">
@@ -209,15 +210,15 @@
           <div class="slider__item">
             <img src="./images/5.jpg" alt="">
           </div>
-          <!-- <button class="slick-arrow.slick-prev" type="button">
+        </div>
+          <button class="slick-arrow.slick-prev" type="button">
             <svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-left"></use>
                     </svg>
           </button>
           <button class="slick-arrow.slick-next" type="button"><svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-right"></use>
-                    </svg></button> -->
-
+                    </svg></button>
         </div>
         </div>
     </section>
