--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
             <img src="./images/5.jpg" alt="">
           </div>
         </div>
-          <button class="slick-arrow.slick-prev" type="button">
+          <button class="slider__slick-arrow slick-arrow slick-prev" type="button">
             <svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-left"></use>
                     </svg>
           </button>
-          <button class="slick-arrow.slick-next" type="button"><svg class="" width="32" height="32">
+          <button class="slider__slick-arrow slick-arrow slick-next" type="button"><svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-right"></use>
                     </svg></button>
         </div>
