--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <header class="page-header">
       <div class="container">
         <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo logo site-nav__logo--current">MIMIHO</a>
-          <div class="site-nav__pages">
+            <a href="./index.html" class="site-nav__logo ">MI</a>
             <ul class="site-nav__list">
               <li class="site-nav__item">
                 <div class="site-nav__page">
@@ -54,31 +53,33 @@
                 </div>
               </li>
             </ul>
-          </div>
-          <div class="page-header__site-net site-net">
+          </nav>
+          <div class="site-net">
             <ul class="site-net__list">
               <li class="site-net__item">
                 <a href="" class="site-net__link" target="_blank">
-                    <svg class="site-net__icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-instagram-icon"></use>
-                    </svg>
+                  <svg class="site-net__icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-icon"></use>
+                  </svg>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-facebook-icon"></use>
-                    </svg>
+                <a href="" class="site-net__link" target="_blank"
+                  ><svg class="site-net__icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-icon"></use>
+                  </svg>
                 </a>
               </li>
               <li class="site-net__item">
-                <a href="" class="site-net__link" target="_blank"><svg class="site-net__icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-telegram-icon"></use>
+                <a href="" class="site-net__link" target="_blank"
+                  ><svg class="site-net__icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-telegram-icon"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-        </nav>
+      </div>
         <!-- <address>
           <div class="page-header__site-address site-address">
             <svg class="site-address__icon" width="20" height="20">
@@ -89,9 +90,8 @@
             >
           </div>
         </address> -->
-      </div>
     </header>
-    <section class="hero-section">
+    <!-- <section class="hero-section">
       <div class="container">
         <div class="hero-section__site-address site-address">
           <svg class="site-address__icon" width="20" height="20">
@@ -108,10 +108,10 @@
           </svg>
           <a href="./" class="site-address__text">Україна, м. Полтава, вул. Маршала Бірюзова, 15</a>
         </div> -->
-        <!-- <div class="hero__buttons"> -->
-        <button class="table__button" type="button" data-modal-open>Забронювати столик</button>
+    <!-- <div class="hero__buttons"> -->
+    <!-- <button class="table__button" type="button" data-modal-open>Забронювати столик</button>
         <!--Backdrop-->
-        <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button type="button" class="button-close" data-modal-close>
               <svg class="x-icon" width="24" height="24">
@@ -119,7 +119,7 @@
               </svg>
             </button>
             <!--Form book the table-->
-            <form name="order-table">
+    <!-- <form name="order-table">
               <h1 class="order-table__title">ЗАБРОНЮВАТИ СТОЛИК</h1>
               <div class="order-table__inputs">
                 <input class="order-table__input" id="person-name" type="text" 
@@ -143,8 +143,8 @@
               <div class="order-table__inputs">
                 <input class="order-table__input" id="date" type="date" name="date" placeholder="Сьогодні">
                 <!-- <option value="due-date" selected>Сьогодні</option> -->
-                <!-- <option value="other">Обрати дату</option> -->
-              </input>  
+    <!-- <option value="other">Обрати дату</option> -->
+    <!-- </input>  
             </div>
             <label class="order-table__label" for="date">На яку дату бронювати?</label>
               <button class="order__button" type="submit">ОФОРМИТИ БРОНЮВАННЯ</button>
@@ -176,9 +176,9 @@
             </ul>
           </div>
       </div>
-    </section>
+    </section> -->
     <!--About our restaurant-->
-    <section class="restaurant">
+    <!-- <section class="restaurant">
       <div class="container">
         <h2 class="restaurant__title">Про наш ресторан</h2>
         <h3 class="restaurant__subtitle">Amet minim mollit non</h3>
