--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                 <div class="site-nav__page">
                   <a href="./index.html" class="site-nav__link">Ресторан</a>
                   <div class="site-nav__contact">
-                    <svg class="site-nav__icon" width="12" height="20">
+                    <a href="tel:095 555 95 33" class="site-nav__icon">
+                    <svg width="12" height="20">
                       <use href="./images/icons.svg#icon-phone-icon"></use>
-                    </svg>
+                    </svg></a>
                     <a href="tel:095 555 95 33" class="site-nav__phone">095 555 95 33</a>
                   </div>
                 </div>
@@ -44,9 +45,10 @@
                 <div class="site-nav__page">
                   <a href="./index.html" class="site-nav__link">Готель</a>
                   <div class="site-nav__contact">
-                    <svg class="site-nav__icon" width="12" height="20">
+                    <a href="tel:066 849 10 89, tel:067 275 85 40" class="site-nav__icon">
+                    <svg width="12" height="20">
                       <use href="./images/icons.svg#icon-phone-icon"></use>
-                    </svg>
+                    </svg></a>
                     <a href="tel:066 849 10 89" class="site-nav__phone">066 849 10 89</a>
                     <a href="tel:067 275 85 40" class="site-nav__phone">067 275 85 40</a>
                   </div>
@@ -91,7 +93,7 @@
           </div>
         </address> -->
     </header>
-    <!-- <section class="hero-section">
+    <section class="hero-section">
       <div class="container">
         <div class="hero-section__site-address site-address">
           <svg class="site-address__icon" width="20" height="20">
