--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </ul>
           </div>
       </div>
-        <!-- <address>
+        <address>
           <div class="page-header__site-address site-address">
             <svg class="site-address__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-location-icon"></use>
@@ -91,7 +91,7 @@
               >Україна, м. Полтава, вул. Маршала Бірюзова, 15</a
             >
           </div>
-        </address> -->
+        </address>
     </header>
     <section class="hero-section">
       <div class="container">
