--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
+      <!-- <div class="container">
         <nav class="site-nav">
             <a href="./index.html" class="site-nav__logo ">MI</a>
             <ul class="site-nav__list">
@@ -92,11 +92,11 @@
               >Україна, м. Полтава, вул. Маршала Бірюзова, 15</a
             >
           </div>
-        </address>
+        </address> -->
     </header>
     <section class="hero-section">
       <div class="container">
-        <div class="hero-section__site-address site-address">
+        <!-- <div class="hero-section__site-address site-address">
           <svg class="site-address__icon" width="20" height="20">
             <use href="./images/icons.svg#icon-location-icon"></use>
           </svg>
@@ -104,7 +104,7 @@
         </div>
         <h1 class="hero__title" >MIMIHO</h1>
         <h2 class="hero__subtitle">Ресторанно-готельний комплекс</h2>
-        <p class="hero__slogan">СМАК ЖИТТЯ 24/7</p>
+        <p class="hero__slogan">СМАК ЖИТТЯ 24/7</p> -->
         <!-- <div class="hero-section__site-address site-address">
           <svg class="site-address__icon" width="20" height="20">
             <use href="./images/icons.svg#icon-location-icon"></use>
@@ -202,28 +202,36 @@
             <div class="image-slider__image">
             <img src="./images/pexels-helena-lopes-696218 1.jpg" alt="">
           </div>
-          </div></div>
-          <div class="swiper__slides">
+          </div>
+          <div class="image-slider__slide swiper__slide">
             <div class="swiper__image"><img src="./images/2.jpg" alt="">
-          </div></div>
-          <div class="swiper__slide">
-            <div class="swiper__image"><img src="./images/3.jpg" alt="">
-          </div></div>
-          <div class="swiper__slide">
-            <div class="swiper__image"><img src="./images/4.jpg" alt="">
-          </div></div>
-          <div class="swiper__slide">
-            <div class="swiper__image"><img src="./images/5.jpg" alt="">
-          </div></div>
+          </div>
         </div>
-          <button class="swiper__button-prev" type="button">
+          <div class="image-slider__slide swiper__slide">
+            <div class="swiper__image"><img src="./images/3.jpg" alt="">
+          </div>
+        </div>
+          <div class="image-slider__slide swiper__slide">
+            <div class="swiper__image"><img src="./images/4.jpg" alt="">
+          </div>
+        </div>
+          <div class="image-slider__slide swiper__slide">
+            <div class="swiper__image"><img src="./images/5.jpg" alt="">
+          </div>
+        </div>
+        
+          <div class="swiper-button-prev">
+            <!-- <button  type="button">
             <svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-left"></use>
                     </svg>
-          </button>
-          <button class="swiper-button-next" type="button"><svg class="" width="32" height="32">
+          </button> -->
+          </div>
+          <div class="swiper-button-next">
+            <!-- <button type="button"><svg class="" width="32" height="32">
                       <use href="./images/icons.svg#icon-arrow-right"></use>
-                    </svg></button>
+                    </svg></button> -->
+                  </div>
         </div>
         </div>
     </section>
